--- a/QuanLyCTCN/Views/MucTieu/Index.cshtml
+++ b/QuanLyCTCN/Views/MucTieu/Index.cshtml
@@ -57,8 +57,7 @@
                                 <li><a class="dropdown-item" href="@Url.Action("Edit", new { id = item.MucTieuId })">
                                     <i class="fas fa-edit"></i> Chỉnh sửa</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item text-danger" href="@Url.Action("Delete", new { id = item.MucTieuId })"
-                                       data-item-name="mục tiêu '@item.TenMucTieu'">
+                                <li><a class="dropdown-item text-danger" href="@Url.Action("Delete", new { id = item.MucTieuId })">
                                     <i class="fas fa-trash"></i> Xóa</a></li>
                             </ul>
                         </div>
