--- a/QuanLyCTCN/Views/NhacNho/Details.cshtml
+++ b/QuanLyCTCN/Views/NhacNho/Details.cshtml
@@ -206,8 +206,7 @@
                                 <i class="fas fa-edit"></i> Chỉnh sửa nhắc nhở
                             </a>
                             <a href="@Url.Action("DanhDauDaDoc", new { id = Model.NhacNhoId })"
-                               class="nhacnho-btn nhacnho-btn-success w-100"
-                               onclick="return confirm('Bạn có chắc muốn đánh dấu nhắc nhở này là đã đọc?')">
+                               class="nhacnho-btn nhacnho-btn-success w-100">
                                 <i class="fas fa-check"></i> Đánh dấu đã đọc
                             </a>
                             <a href="@Url.Action("Delete", new { id = Model.NhacNhoId })" class="nhacnho-btn nhacnho-btn-danger w-100">
