--- a/QuanLyCTCN/Views/NhacNho/Index.cshtml
+++ b/QuanLyCTCN/Views/NhacNho/Index.cshtml
@@ -212,8 +212,7 @@
                                                         </a>
                                                         <a href="@Url.Action("DanhDauDaDoc", new { id = item.NhacNhoId })"
                                                            class="nhacnho-btn nhacnho-btn-success btn-sm"
-                                                           data-tooltip="Đánh dấu đã đọc"
-                                                           onclick="return confirm('Bạn có chắc muốn đánh dấu nhắc nhở này là đã đọc?')">
+                                                           data-tooltip="Đánh dấu đã đọc">
                                                             <i class="fas fa-check"></i>
                                                         </a>
                                                         <a href="@Url.Action("Delete", new { id = item.NhacNhoId })"
