--- a/QuanLyCTCN/Views/DanhMuc/Index.cshtml
+++ b/QuanLyCTCN/Views/DanhMuc/Index.cshtml
@@ -101,8 +101,7 @@
                                                     <a href="@Url.Action("Details", new { id = item.DanhMucId })" title="Chi tiết" data-bs-toggle="tooltip">
                                                         <i class="fas fa-eye"></i> Xem
                                                     </a>
-                                                    <a asp-action="Delete" asp-route-id="@item.DanhMucId" title="Xóa" data-bs-toggle="tooltip"
-                                                       data-item-name="danh mục '@item.TenDanhMuc'">
+                                                    <a asp-action="Delete" asp-route-id="@item.DanhMucId" title="Xóa" data-bs-toggle="tooltip">
                                                         <i class="fas fa-trash"></i> Xóa
                                                     </a>
                                                 </div>
@@ -150,8 +149,7 @@
                                                     <a href="@Url.Action("Details", new { id = item.DanhMucId })" title="Chi tiết" data-bs-toggle="tooltip">
                                                         <i class="fas fa-eye"></i> Xem
                                                     </a>
-                                                    <a asp-action="Delete" asp-route-id="@item.DanhMucId" title="Xóa" data-bs-toggle="tooltip"
-                                                       data-item-name="danh mục '@item.TenDanhMuc'">
+                                                    <a asp-action="Delete" asp-route-id="@item.DanhMucId" title="Xóa" data-bs-toggle="tooltip">
                                                         <i class="fas fa-trash"></i> Xóa
                                                     </a>
                                                 </div>
